[package]
name = "ghttp"
version = "0.2.0"
authors = ["Montasir Mirghani <contact@montasir.me>"]
edition = "2021"
description = "A Rust crate for building HTTP clients and servers with a focus on performance, ease of use, and global configurations"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/dr-montasir/ghttp"
repository = "https://github.com/dr-montasir/ghttp"
readme = "README.md"
keywords = ["http", "url", "status"]
categories = ["web-programming"]

[dependencies]
http = "1.1.0"
url = "2.5.3"

[lib]
name = "ghttp"
path = "src/lib.rs"
